<resources>
    <string name="app_name">Литературный помощник</string>
    <string name="main_tag_1">Афоризмы</string>
    <string name="main_tag_2">Басни</string>
    <string name="main_tag_3">Детективы</string>
    <string name="main_tag_4">Драматургия</string>
    <string name="main_tag_5">Историческая проза</string>
    <string name="main_tag_6">Классическая проза</string>
    <string name="main_tag_7">Отечественный боевик</string>
    <string name="main_tag_8">Поэзия</string>
    <string name="main_tag_9">Приключения</string>
    <string name="main_tag_10">Сентиментальная проза</string>
    <string name="main_tag_11">Современная проза</string>
    <string name="main_tag_12">Фантастика</string>
    <string name="main_tag_13">Фэнтези</string>
    <string name="main_tag_14">Эпос и фольклор</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Главная</string>
    <string name="title_search">Поиск</string>
    <string name="title_acc">Профиль</string>
    <string name="recommendation_string">Возможно вам понравятся отсортированные по рейтингу книги в жанре  </string>
    <string name="to_name">Персональные подборки для тебя, </string>
    <string name="hello_account_fragment">Привет, </string>
    <string name="select_tags_hint">Выберите не менее 1 жанра</string>
    <string name="select_tags_next">Далее</string>
    <string name="select_tags_title">Выбор жанров</string>
    <string name="activity_login_title">Войти</string>
    <string name="activity_login_hint">Email</string>
    <string name="activity_login_pass_hint">Пароль</string>
    <string name="activity_registration_pass_hint">Пароль(не менее 8 символов)</string>
    <string name="activity_registration_title_button">Зарегистрироваться</string>
    <string name="registration_title">Регистрация</string>
    <string name="registration_hint_nickname">Никнейм</string>
    <string name="fragment_account_liked_button_text">Понравившиеся произведения</string>
    <string name="fragment_account_exit_button_text">Выход</string>
    <string name="book_fragment_author">Автор: </string>
    <string name="book_fragment_liked">Оценили: </string>
    <string name="book_fragment_genre">Жанр: </string>
    <string name="book_fragment_description">Описание</string>
    <string name="home_fragment_none_selected_tags_hint">Вы забыли выбрать любимые жанры на этапе регистрации, пожалуйста сделайте это сейчас</string>
    <string name="registration_rejected">Регистрация была отменена, создайте новый аккаунт использовав те же данные</string>
    <string name="editprofile_fragment_change_photo_button">Изменить фото профиля</string>
    <string name="home_fragment_last_news">Последние новости</string>
    <string name="is_permission_denied">Без хранилища пользоваться сменой невозможно, разрешите в настройках </string>
    <string name="home_fragment_for_you">Для тебя</string>
    <string name="liked_books_fragment_no_liked">Здесь будут находиться понравившиеся произведения</string>
    <string name="search_fragment_all_genres">Все жанры</string>
    <string name="select_image_bottom_text_photo">Выбрать фото</string>
    <string name="fragment_account_edit_tags_button_text">Изменить выбранные жанры</string>
    <string name="registration_hint">Все поля должны быть заполнены</string>
    <string name="unsuccessful_login">Проверьте логин или пароль</string>
    <string name="registration_create_pass_hint">Ваш пароль должен состоять не менее чем из 8 символов</string>
    <string name="successful_registr">Вы успешно зарегестрировались, выбрать изображение профиля можно во вкладке Аккаунт</string>
</resources>