<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FavouriteTagsActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:textSize="30sp"
        android:text="@string/select_tags_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:text="@string/select_tags_hint"/>

    <com.google.android.material.chip.ChipGroup
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:selectionRequired="true"
        android:id="@+id/chip_tags_group"
        app:chipSpacingHorizontal="10dp"
        app:singleSelection="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:checkable="true"
            android:text="@string/main_tag_1"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/first_chip"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
        android:layout_width="wrap_content"
        android:checkable="true"
        android:text="@string/main_tag_2"
            style="@style/Widget.MaterialComponents.Chip.Choice"
        android:id="@+id/second_chip"
        android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:checkable="true"
            android:text="@string/main_tag_3"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/third_chip"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:checkable="true"
            android:text="@string/main_tag_4"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/fourth_chip"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:checkable="true"
            android:text="@string/main_tag_5"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/fifth_chip"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:checkable="true"
            android:text="@string/main_tag_6"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/sixth_chip"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:checkable="true"
            android:text="@string/main_tag_7"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/seventh_chip"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:checkable="true"
            android:text="@string/main_tag_8"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/eighth_chip"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:checkable="true"
            android:text="@string/main_tag_9"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/ninth_chip"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:checkable="true"
            android:text="@string/main_tag_10"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/tenth_chip"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:checkable="true"
            android:text="@string/main_tag_11"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/eleventh_chip"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:checkable="true"
            android:text="@string/main_tag_12"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/twelfth_chip"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:checkable="true"
            android:text="@string/main_tag_13"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/thirteenth_chip"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:checkable="true"
            android:text="@string/main_tag_14"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/fourteenth_chip"
            android:layout_height="wrap_content"/>

    </com.google.android.material.chip.ChipGroup>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/select_tags_next"
        android:textSize="20sp"
        android:id="@+id/clickable_text_to_next_activity"
        android:focusable="true" />
</LinearLayout>